--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,23 +13,20 @@
 	},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	"forwardPorts": [5000],
+	"forwardPorts": [3000],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": "npm install",
 
 	// Configure tool-specific properties.
 	"customizations": {
-		"vscode": {"extensions": ["aaron-bond.better-comments",
-								"kisstkondoros.vscode-codemetrics", 
-								"fill-labs.dependi","usernamehw.errorlens",
+		"vscode": {"extensions": ["kisstkondoros.vscode-codemetrics", "fill-labs.dependi",
 								"dbaeumer.vscode-eslint", "mhutchie.git-graph","esbenp.prettier-vscode",
 								"Postman.postman-for-vscode", "christian-kohler.path-intellisense",
 								"ritwickdey.LiveServer","firsttris.vscode-jest-runner",
 								"VisualStudioExptTeam.intellicode-api-usage-examples",
 								"VisualStudioExptTeam.vscodeintellicode","eamodio.gitlens",
 								"github.vscode-github-actions"]}
-
 	}
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
