--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,9 @@
 	"name": "nest-websocket",
 
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/typescript-node:1-22-bookworm",
+	"dockerComposeFile": "docker-compose.yml",
+	"service":"nest-websocket",
+	"workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
 	
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
@@ -16,7 +18,7 @@
 	"forwardPorts": [3000],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "npm install",
+	"postCreateCommand": "npm install; npm i typeorm; npm i -g @nestjs/cli",
 
 	// Configure tool-specific properties.
 	"customizations": {
@@ -26,7 +28,8 @@
 								"ritwickdey.LiveServer","firsttris.vscode-jest-runner",
 								"VisualStudioExptTeam.intellicode-api-usage-examples",
 								"VisualStudioExptTeam.vscodeintellicode","eamodio.gitlens",
-								"github.vscode-github-actions"]}
+								"github.vscode-github-actions","cweijan.vscode-database-client2",
+								"cweijan.dbclient-jdbc"]}
 	}
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
